# mnist_dll

./: CMakeLists.txt  README.md
include/: mnist_dll.h  mnist_lib.h  mnist_net_pso_14.h
src/: dnn_mnist_dll_v1.cpp  mnist_dll_v1.cpp  mnist_lib_v1.cpp
test_code/: dnn_mnist_dll_v1.cpp
